<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideOverlay" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        android:gravity="fill"
        android:visibility="visible" >

        <Button
            android:id="@+id/button2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignBottom="@+id/button1"
            android:layout_alignParentRight="true"
            android:onClick="decrypt"
            android:text="@string/decrypt" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:onClick="clear"
            android:text="@string/clear" />

        <Button
            android:id="@+id/button1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:onClick="encrypt"
            android:text="@string/encrypt" />

        <EditText
            android:id="@+id/gettext"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:layout_above="@+id/button2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="enter text here to encrypt"
            tools:ignore="TextFields" />

        <RadioButton
            android:id="@+id/emailradiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textradiobutton"
            android:layout_alignBottom="@+id/textradiobutton"
            android:layout_toLeftOf="@+id/button3"
            android:checked="false"
            android:longClickable="false"
            android:onClick="emailradiobuttoncheck"
            android:selectAllOnFocus="false"
            android:text="email" />

        <RadioButton
            android:id="@+id/textradiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button3"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/button3"
            android:longClickable="true"
            android:onClick="textradiobuttoncheck"
            android:text="text" />

        <Button
            android:id="@+id/text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText1"
            android:layout_centerHorizontal="true"
            android:onClick="text"
            android:text="@string/text" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailradiobutton"
            android:layout_centerHorizontal="true"
            android:text="@string/phonenumber"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:ellipsize="end"
            android:ems="10"
            android:maxLength="30" >

            <requestFocus />
        </EditText>

    </RelativeLayout>

</LinearLayout>